syntax = "proto3";

package xion.jwk.v1;

import "xion/jwk/v1/audience.proto";
import "cosmos/msg/v1/msg.proto";

option go_package = "github.com/burnt-labs/xion/x/jwk/types";

// Msg defines the Msg service.
service Msg {
  // CreateAudienceClaim defines a method to create an audience claim.
  rpc CreateAudienceClaim(MsgCreateAudienceClaim)
      returns (MsgCreateAudienceClaimResponse);
  // DeleteAudienceClaim defines a method to delete an audience claim.
  rpc DeleteAudienceClaim(MsgDeleteAudienceClaim)
      returns (MsgDeleteAudienceClaimResponse);
  // CreateAudience defines a method to create a new audience.
  rpc CreateAudience(MsgCreateAudience) returns (MsgCreateAudienceResponse);
  // UpdateAudience defines a method to update an audience.
  rpc UpdateAudience(MsgUpdateAudience) returns (MsgUpdateAudienceResponse);
  // DeleteAudience defines a method to delete an audience.
  rpc DeleteAudience(MsgDeleteAudience) returns (MsgDeleteAudienceResponse);
}

// MsgCreateAudienceClaim defines a message to create an audience claim.
message MsgCreateAudienceClaim {
  option (cosmos.msg.v1.signer) = "admin";

  string admin = 1;
  bytes aud_hash = 2;
}

// MsgCreateAudienceClaimResponse defines the Msg/CreateAudienceClaim response
// type.
message MsgCreateAudienceClaimResponse {}

// MsgDeleteAudienceClaim defines a message to delete an audience claim.
message MsgDeleteAudienceClaim {
  option (cosmos.msg.v1.signer) = "admin";

  string admin = 1;
  bytes aud_hash = 2;
}

// MsgDeleteAudienceClaimResponse defines the Msg/DeleteAudienceClaim response
// type.
message MsgDeleteAudienceClaimResponse {}

// MsgCreateAudience defines a message to create a new audience.
message MsgCreateAudience {
  option (cosmos.msg.v1.signer) = "admin";

  string admin = 1;
  string aud = 2;
  string key = 3;
}

// MsgCreateAudienceResponse defines the Msg/CreateAudience response type.
message MsgCreateAudienceResponse { Audience audience = 1; }

// MsgUpdateAudience defines a message to update an audience.
message MsgUpdateAudience {
  option (cosmos.msg.v1.signer) = "admin";

  string admin = 1;
  string new_admin = 2;
  string aud = 3;
  string key = 4;
  string new_aud = 5;
}

// MsgUpdateAudienceResponse defines the Msg/UpdateAudience response type.
message MsgUpdateAudienceResponse { Audience audience = 1; }

// MsgDeleteAudience defines a message to delete an audience.
message MsgDeleteAudience {
  option (cosmos.msg.v1.signer) = "admin";

  string admin = 1;
  string aud = 2;
}

// MsgDeleteAudienceResponse defines the Msg/DeleteAudience response type.
message MsgDeleteAudienceResponse {}
